# VirtualFS

./: .gitignore  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  FileSystemEntity.cpp  FileSystemEntity.h  I_Printable.h  LICENSE  README.md  SymbolicLink.cpp  SymbolicLink.h  main.cpp
